Gnome 45: Fix annoying overflow indicator (dashed line), Fix #261

--- a/gtk-4.0/widgets/_frames.scss
+++ b/gtk-4.0/widgets/_frames.scss
@@ -53,18 +53,7 @@ scrolledwindow {
       &:backdrop { @include overshoot(right, backdrop); }
     }
   }
-
-  // Overflow indication, works similarly to the overshoot, the size if fixed tho.
-  undershoot {
-    &.top { @include undershoot(top); }
-
-    &.bottom { @include undershoot(bottom); }
-
-    &.left { @include undershoot(left); }
-
-    &.right { @include undershoot(right); }
-  }
-
+  
   junction { // the small square between two scrollbars
     border-color: transparent;
     // the border image is used to add the missing dot between the borders, details, details, details...
